Corregido un problema por el que el visor de firmas no trataba adecuadamente los ficheros OOXML y ODF